Added token regeneration after user right's changed
