# api_gateway/docs/swagger.json
@@ -108,8 +108,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "User successfully authorized",
+                    "201": {
+                        "description": "User registered and authorized",
                         "schema": {
                             "$ref": "#/definitions/handlers.UserRegister.UserResponse"
                         }
